argo-rollouts/base/dashboard-ing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-dashboard
  namespace: argo-rollouts
spec:
  hosts:
  -  "argo-rollouts-dashboard"
  -  "dashboard-argo.k8s.raj.ninja"
  -  "argo-rollouts.local"
  gateways:
  - kong
  http:
  - route:
    - destination:
        host: argo-rollouts-dashboard
        port:
          number: 3100
    retries:
      perTryTimeout: 500ms
      retryOn: 5xx,gateway-error,connect-failure,refused-stream
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
      backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 80
T---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-1
spec:
  ingressClassName: kong
  rules:
  - host: example.com
    http:
      paths:
      - path: /test1
        backend:
          serviceName: echo
          servicePort: 80
